adding ldap test

--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -120,8 +120,8 @@ password.policy.url=https://password.example.edu/change
 #========================================
 # ####### LDAP properties start #########
 #========================================
-#ldap.url=ldap://ldap.pramati.com:389/
-ldap.url=ldap://127.0.0.1:389/
+ldap.url=ldap://ldap.pramati.com:389/
+#ldap.url=ldap://127.0.0.1:389/
 
 # LDAP connection timeout in milliseconds
 ldap.connectTimeout=3000
@@ -173,6 +173,6 @@ ldap.authn.searchFilter=(uid={user})
 ldap.authn.format=uid=%s,ou=Employees,dc=pramati,dc=com
 #ldap.authn.format=%s@example.com
 #========================================
-# ####### LDAP properties start #########
+# ####### LDAP properties end #########
 #========================================
 
