--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -163,7 +163,7 @@ ldap.authn.baseDn=ou=Employees,dc=pramati,dc=com
 ldap.authn.managerDN=uid=manager,cn=admin,dc=pramati,dc=com
 
 # Manager password for authenticated searches
-ldap.authn.managerPassword=Ld@p123
+ldap.authn.managerPassword=SomepasswordHere
 
 # Search filter used for configurations that require searching for DNs
 #ldap.authn.searchFilter=(&(uid={user})(accountState=active))
