Auth with email

--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -157,21 +157,41 @@ ldap.pool.idleTime=600
 #========================================
 
 # Base DN of users to be authenticated
-ldap.authn.baseDn=ou=Employees,dc=pramati,dc=com
+#ldap.authn.baseDn=ou=Employees,dc=pramati,dc=com
 
 # Manager DN for authenticated searches
-ldap.authn.managerDN=uid=manager,cn=admin,dc=pramati,dc=com
+#ldap.authn.managerDN=uid=manager,cn=admin,dc=pramati,dc=com
 
 # Manager password for authenticated searches
-ldap.authn.managerPassword=Ld@p123
+#ldap.authn.managerPassword=Somepassword
 
 # Search filter used for configurations that require searching for DNs
 #ldap.authn.searchFilter=(&(uid={user})(accountState=active))
-ldap.authn.searchFilter=(uid={user})
+#ldap.authn.searchFilter=(uid={user})
 
 # Search filter used for configurations that require searching for DNs
-ldap.authn.format=uid=%s,ou=Employees,dc=pramati,dc=com
+#ldap.authn.format=uid=%s,ou=Employees,dc=pramati,dc=com
 #ldap.authn.format=%s@example.com
+
+
+
+# Base DN of users to be authenticated
+ldap.authn.baseDn=ou=Employees,dc=pramati,dc=com
+
+# Manager DN for authenticated searches
+ldap.authn.managerDN=uid=Pramati,cn=admin,dc=pramati,dc=com
+
+# Manager password for authenticated searches
+ldap.authn.managerPassword=Somepassword
+
+# Search filter used for configurations that require searching for DNs
+#ldap.authn.searchFilter=(&(uid={user})(accountState=active))
+ldap.authn.searchFilter=(mail={user})
+
+# Search filter used for configurations that require searching for DNs
+#ldap.authn.format=uid=%s,ou=Employees,dc=pramati,dc=com
+ldap.authn.format=%s
+
 #========================================
 # ####### LDAP properties end #########
 #========================================
