--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -68,7 +68,7 @@
     </init-param>
     <init-param>
       <param-name>onlyPostParameters</param-name>
-      <param-value></param-value>
+      <param-value>username password</param-value>
     </init-param>
   </filter>
   <!--
