--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -30,7 +30,7 @@ cas.viewResolver.basename=default_views
 # Unique CAS node name
 # host.name is used to generate unique Service Ticket IDs and SAMLArtifacts.  This is usually set to the specific
 # hostname of the machine running the CAS node, but it could be any label so long as it is unique in the cluster.
-host.name=cas01.example.org
+host.name=cas.pramati.com
 
 ##
 # Database flavors for Hibernate
@@ -46,7 +46,7 @@ host.name=cas01.example.org
 # WEB-INF/cas-servlet.xml
 #
 # Specify whether CAS should redirect to the specified service parameter on /logout requests
-# cas.logout.followServiceRedirects=false
+cas.logout.followServiceRedirects=true
 
 ##
 # Single Sign-On Session Timeouts
